<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/black1"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ticket_no"
            android:textColor="@color/editTextBgColor"
            android:layout_weight=".85"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_id_specfic_ticket"
            android:textColor="@color/editTextBgColor"
            android:layout_weight="1.15"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginBottom="5dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@color/editTextBgColor"
            android:layout_weight=".85"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_id_specfic_name"
            android:textColor="@color/editTextBgColor"
            android:layout_weight="1.15"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:visibility="gone"
        android:id="@+id/ll_company_name"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/company_name"
            android:textColor="@color/editTextBgColor"
            android:layout_weight=".85"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_id_specfic_company_name"
            android:textColor="@color/editTextBgColor"
            android:layout_weight="1.15"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/user_type"
            android:textColor="@color/editTextBgColor"
            android:layout_weight=".85"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_id_specfic_user_type"
            android:textColor="@color/editTextBgColor"
            android:layout_weight="1.15"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/problem_type"
            android:textColor="@color/editTextBgColor"
            android:layout_weight=".85"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_id_specfic_problem_type"
            android:textColor="@color/editTextBgColor"
            android:layout_weight="1.15"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginBottom="5dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/contact_no"
            android:textColor="@color/editTextBgColor"
            android:layout_weight=".85"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_id_specfic_registered_no"
            android:textColor="@color/editTextBgColor"
            android:layout_weight="1.15"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:visibility="gone"
        android:id="@+id/ll_alternate_contact_no"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/alt_contact_no"
            android:textColor="@color/editTextBgColor"
            android:layout_weight=".85"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_id_specfic_alternate_no"
            android:textColor="@color/editTextBgColor"
            android:layout_weight="1.15"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/prob_desc"
            android:textColor="@color/editTextBgColor"
            android:layout_weight=".85"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_id_specfic_description"
            android:textColor="@color/editTextBgColor"
            android:layout_weight="1.15"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/registration_time"
            android:textColor="@color/editTextBgColor"
            android:layout_weight=".85"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_id_registration_time"
            android:textColor="@color/editTextBgColor"
            android:layout_weight="1.15"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/registration_date"
            android:textColor="@color/editTextBgColor"
            android:layout_weight=".85"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_id_registration_date"
            android:textColor="@color/editTextBgColor"
            android:layout_weight="1.15"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:visibility="gone"
        android:id="@+id/ll_id_engineer_name"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/engineer_name"
            android:textColor="@color/editTextBgColor"
            android:layout_weight=".85"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_id_previous_engineer_appointed"
            android:textColor="@color/editTextBgColor"
            android:layout_weight="1.15"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:visibility="gone"
        android:id="@+id/ll_engineer_allotment_time"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/engineer_allotment_time"
            android:textColor="@color/editTextBgColor"
            android:layout_weight=".85"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_id_engineer_allotment_time"
            android:textColor="@color/editTextBgColor"
            android:layout_weight="1.15"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:visibility="gone"
        android:id="@+id/ll_engineer_allotment_date"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/engineer_allotment_date"
            android:textColor="@color/editTextBgColor"
            android:layout_weight=".85"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_id_engineer_allotment_date"
            android:textColor="@color/editTextBgColor"
            android:layout_weight="1.15"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        >
        <EditText
            android:id="@+id/et_id_specific_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:textColorHint="@color/hintColor"
            android:textColor="@color/edit_text_state"
            android:maxLines="3"
            android:background="@drawable/customize_edit_text"
            />

    </LinearLayout>
    <Spinner
        android:id="@+id/spinner_engineers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/select_engineer"
        android:layout_marginBottom="5dp"/>
    <Spinner
        android:id="@+id/spinner_appointment_dates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/select_date"
        android:layout_marginBottom="5dp"
        />
    <Spinner
        android:id="@+id/spinner_appointment_date_slots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/select_slot"
        android:layout_marginBottom="5dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_id_specfic_error"
        android:visibility="gone"
        android:textColor="@color/errorColor"
        android:layout_marginBottom="5dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_appoint_engineer"
        android:text="@string/appoint_engineer"
        android:layout_marginBottom="5dp"
        android:textColor="@color/fontColor"
        android:background="@drawable/customize_button"
        />

</LinearLayout>
   </ScrollView>