<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="rj.adminbkinfotech1.AdminLogin"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="@drawable/black1"
    android:padding="60dp"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_id_username"
        android:hint="@string/username"
        android:inputType="text"
        android:drawableLeft="@drawable/username20"
        android:drawableStart="@drawable/username20"
        android:drawablePadding="5dp"
        android:background="@drawable/customize_edit_text"
        android:layout_marginBottom="10dp"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_id_password"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:drawableLeft="@drawable/password20"
        android:drawableStart="@drawable/password20"
        android:drawablePadding="5dp"
        android:background="@drawable/customize_edit_text"
        android:layout_marginBottom="15dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_id_error"
        android:visibility="gone"
        android:textColor="@color/errorColor"
        android:layout_marginBottom="15dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_id_submit"
        android:text="@string/login"
        android:background="@drawable/customize_button"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/fontColor"
        />

</LinearLayout>
